--- a/vocab-search-app/src/App.css
+++ b/vocab-search-app/src/App.css
@@ -1,5 +1,17 @@
+.upper-flex {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+svg {
+	padding: 0px 5px 0px 5px;
+}
+
 .App {
-  text-align: center;
+	text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
@@ -9,7 +21,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+	animation: App-logo-spin infinite 20s linear;
   }
 }
 
@@ -30,9 +42,9 @@
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
+	transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+	transform: rotate(360deg);
   }
 }
