--- a/vocab-search-app/src/components/SearchedText/SearchedText.scss
+++ b/vocab-search-app/src/components/SearchedText/SearchedText.scss
@@ -1,17 +1,31 @@
+$tracau-banner-height: 3em;
+$stylin-bg-color: #282c34;
+
 .SearchedText {
-    background-color: #282c34;
-    min-height: 100vh;
+    background-color: $stylin-bg-color;
+    min-height: calc(100vh - #{$tracau-banner-height});
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
 
     .text-display {
-        min-height: 90vh;
+        min-height: calc(100vh - #{$tracau-banner-height});
         display: flex;
+        flex-direction: column;
         align-items: center;
-        margin-bottom: 5vh;
+        justify-content: center;
+    }
+
+    .footer {
+        background-color: $stylin-bg-color;
+        height: $tracau-banner-height;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .submit-search {
+            width: 100%;
+        }
     }
 }
